infrastructure/terraform/modules/eks/eks-addons/game2048/alb/alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-2048
  namespace: game-2048
  annotations:
    # create AWS Application LoadBalancer
    kubernetes.io/ingress.class: alb
    # external type
    alb.ingress.kubernetes.io/scheme: internet-facing
    # target type
    alb.ingress.kubernetes.io/target-type: ip
    # AWS Certificate Manager certificate's ARN
    alb.ingress.kubernetes.io/certificate-arn: ${certificate_arn}
    # open ports 80 and 443
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # redirect all HTTP to HTTPS
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # ExternalDNS settings: https://rtfm.co.ua/en/kubernetes-update-aws-route53-dns-from-an-ingress/
#    external-dns.alpha.kubernetes.io/hostname: "app1-test-common-ingress.example.com, app2-test-common-ingress.example.com"
    alb.ingress.kubernetes.io/healthcheck-path: "/game-2048"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/success-codes: 200,201,302,401
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /game-2048/*
            backend:
              serviceName: istio-ingressgateway
              servicePort: 80
